# handtracking

./: Main.py  Pose.py  deep_pose.py  face_mesh.py  list_camera1.py  pyproject.toml  readme.md  requirements.txt
handtracking/: Main.py  Pose.py  deep_pose.py  face_mesh.py  list_cameras.py  play_camera.py  requirements.txt
handtracking/env/: pyvenv.cfg
handtracking/env/Scripts/: activate  activate.bat
