[tool.poetry]
name = "handtracking"
version = "0.1.0"
description = ""
authors = ["Rick Anderson <rianders@docs.rutgers.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
cvzone = "^1.5.6"
mediapipe = "^0.10.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
